no compression build

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/AnimationDrivenLocomotionDemo.loader.js";
       var config = {
-        dataUrl: buildUrl + "/AnimationDrivenLocomotionDemo.data.gz",
-        frameworkUrl: buildUrl + "/AnimationDrivenLocomotionDemo.framework.js.gz",
-        codeUrl: buildUrl + "/AnimationDrivenLocomotionDemo.wasm.gz",
+        dataUrl: buildUrl + "/AnimationDrivenLocomotionDemo.data",
+        frameworkUrl: buildUrl + "/AnimationDrivenLocomotionDemo.framework.js",
+        codeUrl: buildUrl + "/AnimationDrivenLocomotionDemo.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "RockstarAnimationDemo",
